# ncio

./: .clang-format  .gitignore  Contributing.md  LICENSE  README.md  codecov.yaml  meson.build  meson_options.txt
.github/workflows/: ci-github-actions.yaml  manual-github-actions.yaml  nightly-github-actions.yaml
bindings/CXX17/: meson.build  ncio.h
bindings/CXX17/ncio/cxx17/: cxx17DataDescriptor.cpp  cxx17DataDescriptor.h  cxx17DataDescriptor.tcc  cxx17NCIO.cpp  cxx17NCIO.h
bindings/CXX17/ncio/cxx17/schema/: cxx17ncioNexus.cpp  cxx17ncioNexus.h  cxx17ncioNexus.tcc
bindings/CXX17/ncio/cxx17/schema/nexus/: cxx17DataDescriptorNexus.tcc  cxx17ncioNexus.cpp  cxx17ncioNexus.h  cxx17ncioNexus.tcc  cxx17ncioNexusDataDescriptor.tcc
docs/api_doxygen/: ncio.doxyfile
scripts/ci/dockerhub/centos7-gcc8-clang5/: Dockerfile
scripts/ci/dockerhub/centos7-gcc8-clang6.0/: Dockerfile
scripts/ci/dockerhub/ubuntu18-gcc8-clang6/: Dockerfile
scripts/ci/github-actions/bash/: check_clang-format.sh  run_step.sh  setup_centos7.sh  setup_debian.sh  setup_linux.sh  setup_macOS.sh
scripts/ci/github-actions/powershell/: run_step.ps1  setup_windows.ps1
scripts/development/: setup.sh
scripts/nightly/github-actions/bash/: run_step.sh
scripts/packaging/conda/: build.sh  meta.yaml
source/: meson.build
source/ncio/: README.md  meson.build  ncioConfig.h.in
source/ncio/common/: ncioConfig.h.in  ncioMacros.h  ncioTypes.h  ncioTypesNexus.h
source/ncio/core/: DataDescriptor.cpp  DataDescriptor.h  DataDescriptor.inl  DataDescriptor.tcc  NCIO.cpp  NCIO.h
source/ncio/helper/: ncioHelperMath.cpp  ncioHelperMath.h  ncioHelperMath.tcc  ncioHelperString.cpp  ncioHelperString.h  ncioHelperTypes.cpp  ncioHelperTypes.h  ncioHelperTypes.tcc
source/ncio/schema/: ncioNexus.cpp  ncioNexus.h  ncioNexus.tcc
source/ncio/schema/nexus/: DataDescriptorNexus.tcc  TransportHDF5Nexus.tcc  TransportNexus.tcc  TransportNullNexus.tcc  ncioNexus.cpp  ncioNexus.h  ncioNexus.tcc  ncioNexusDataDescriptor.tcc  ncioTypesNexus.h  ncioTypesSchemaNexus.h
source/ncio/transport/: Transport.cpp  Transport.h  Transport.tcc  TransportHDF5.cpp  TransportHDF5.h  TransportHDF5.tcc  TransportNull.cpp  TransportNull.h  TransportNull.tcc
subprojects/: doctest.wrap  ncio-data.wrap  nlohmann_json.wrap
testing/: meson.build  ncio-doctest.h
testing/ci/: meson.build
testing/ci/functional/bindings/CXX17/: functionalTest_cxx17DataDescriptor.cpp  functionalTest_cxx17NCIO.cpp  meson.build
testing/ci/functional/bindings/CXX17/schema/nexus/: functionalTest_cxx17DataDescriptorNexus.cpp
testing/ci/unit/: meson.build
testing/ci/unit/ncio/core/: unitTest_NCIO.cpp
testing/ci/unit/ncio/helper/: unitTest_ncioHelperMath.cpp  unitTest_ncioHelperString.cpp  unitTest_ncioHelperTypes.cpp
testing/functional/: meson.build
testing/functional/bindings/: meson.build
testing/functional/bindings/CXX17/: functionalTest_cxx17Common.cpp  functionalTest_cxx17DataDescriptor.cpp  functionalTest_cxx17NCIO.cpp  meson.build  test_cxx17NCIO.cpp
testing/functional/bindings/CXX17/schema/nexus/: functionalTest_cxx17DataDescriptorNexus.cpp
testing/regression/: meson.build
testing/regression/nightly/: meson.build
testing/regression/nightly/nexus/: README.md  meson.build  nightlyTest_NexusData.cpp  nightlyTest_NexusData.h  nightlyTest_NexusData.tcc  nightlyTest_NexusDataTests.cpp  nightlyTest_nexusDataIndex.cpp  nightlyTest_nexusDataIndex.h  nightlyTest_nexusDataIndex.tcc  nightlyTest_nexusDataIndex_CG2_8179.cpp  nightlyTest_nexusDataIndex_CG2_8953.cpp  nightlyTest_nexusDataIndex_CG3_1545.cpp  nightlyTest_nexusDataIndex_CG3_943.cpp  nightlyTest_nexusDataIndex_EQSANS_112296.cpp  nightlyTest_nexusDataIndex_EQSANS_112307.cpp  nightlyTest_nexusDataIndex_NOM_78106.cpp
testing/unit/: meson.build
testing/unit/ncio/core/: unitNCIO.cpp  unitTest_NCIO.cpp
testing/unit/ncio/helper/: unitTest_ncioHelperString.cpp
