# File provides accepted options for ncio build configuration
#  Created on: May 11, 2020
#      Author: William F Godoy godoywf@ornl.gov

option('build-tests', type : 'boolean', value : true)
option('build-tests-regression', type : 'boolean', value : false)
# options to build application specific schemas
option('NCIO_USE_SCHEMA_NEXUS', type : 'boolean', value : true)
